# Mvision

./: .gitignore  AGENTS.MD  Makefile  README.md  docker-compose.friends.yml  docker-compose.live.yml  docker-compose.observability.yml  docker-compose.sprint01.yml
.playwright-mcp/: page-2026-07-22T13-17-56-246Z.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 58ecca5e38a3_phase1_canonical_schema.py  7d6f0b3a9c21_add_live_stream_tables.py  a81f5c2d9e40_add_live_identity_epoch.py  b72d4e9a6f13_live_track_id_uint64.py  c21d7a1e4f02_phase2_video_backend.py  c83f19d4a2e7_live_trace_context.py  d92a7f4c1b30_live_session_api.py
backend/alembic/versions/tools/: build_engines.sh
backend/app/: config.py  main.py
backend/app/infrastructure/database/: ids.py  models.py  session.py
backend/app/infrastructure/gpu/: contracts.py  protocol.py  worker_pool.py
backend/app/infrastructure/live/: __init__.py  native_runner.py  protocol.py  uri_cipher.py
backend/app/infrastructure/media/: __init__.py  mediamtx_client.py
backend/app/infrastructure/object_storage/: exceptions.py  minio_adapter.py
backend/app/infrastructure/vector_store/: __init__.py  exceptions.py  qdrant_adapter.py
backend/app/infrastructure/video/: __init__.py  native_runner.py  probe.py  protocol.py
backend/app/observability/: __init__.py  metrics.py  semantic.py  smoke.py  telemetry.py
backend/app/presentation/: auth.py  dependencies.py
backend/app/presentation/controllers/: cameras.py
backend/app/presentation/routers/: cameras.py  faces.py  health.py  live_connectors.py  live_sessions.py  metrics.py  processes.py  videos.py
backend/app/presentation/schemas/: cameras.py  faces.py  live_connectors.py  live_sessions.py  processes.py  videos.py
backend/app/services/: __init__.py  enrollment_service.py  exceptions.py  face_matcher.py  face_sample_persistence_service.py  identity_service.py  image_validation.py  live_camera_service.py  live_connector_service.py  live_event_service.py  live_identity_service.py  live_session_compiler.py  live_session_service.py  live_supervisor.py  mediamtx_reconciliation_service.py  process_query_service.py  recognition_service.py  storage_reconciliation_service.py  video_identity_voting_service.py  video_job_service.py  video_processor.py  video_result_service.py  video_tracking_service.py  video_upload_service.py
backend/app/worker/: live_worker_main.py  video_worker_main.py
backend/pipeline/: CMakeLists.txt  Dockerfile  Dockerfile.native-test
backend/pipeline/include/mvision/: aligned_evidence_meta.hpp  face_align.hpp  image_source_pool.hpp  live_osd_state.hpp  live_pipeline.hpp  live_protocol.hpp  live_track_state.hpp  live_worker_queue.hpp  protocol.hpp  video_pipeline.hpp  video_protocol.hpp  yolo_face_parser.hpp  yolo_postprocess.hpp  yolo_postprocess_plugin.hpp
backend/pipeline/src/: face_align_kernel.cu  face_preprocess.cpp  image_source_pool.cpp  live_osd_state.cpp  live_pipeline.cpp  live_protocol.cpp  live_track_state.cpp  live_worker_main.cpp  live_worker_queue.cpp  protocol.cpp  video_pipeline.cpp  video_protocol.cpp  video_worker_main.cpp  worker_main.cpp  yolo_face_parser.cpp  yolo_postprocess.cu  yolo_postprocess_plugin.cpp
backend/pipeline/tests/: test_detector_pipeline.cpp  test_face_alignment.cu  test_image_ingress.cpp  test_live_lifecycle.cpp  test_live_osd_state.cpp  test_live_protocol.cpp  test_live_runtime_contract.cpp  test_live_track_state.cpp  test_live_worker_process.cpp  test_protocol.cpp  test_video_aggregation.cpp  test_video_protocol.cpp  test_yolo_decode.cu  test_yolo_face_parser.cpp
backend/pipeline/tools/: benchmark_image_ingress.cpp  benchmark_yolo_postprocess.cu  inspect_detector_pipeline.cpp  inspect_live_runtime.cpp  smoke_live_pipeline.cpp
backend/scripts/: annotate_video.py  benchmark_lfw_3gpu.py  debug_image_pipeline.py  import_friends_dataset.py  inspect_model_contract.py  prepare_arcface_model.py  prepare_yolo_model.py  repair_qdrant_index.py  test_annotate_video.py  test_benchmark_lfw_3gpu.py  test_import_friends_dataset.py  test_repair_qdrant_index.py  test_verify_live_observability.py  verify_live_observability.py
backend/tests/contract/: test_cameras_api.py  test_faces_api.py  test_live_connectors_api.py  test_live_protocol_parity.py  test_live_sessions_api.py  test_live_sessions_schema.py  test_metrics_api.py  test_model_inventory.py  test_result_protocol.py  test_telemetry_privacy.py  test_videos_api.py  test_worker_protocol.py
backend/tests/fixtures/rtsp/: README.md  server.py
backend/tests/integration/: conftest.py  helpers.py
backend/tests/integration/persistence/: test_event_repository.py  test_identity_repository.py  test_live_repositories.py  test_live_session_repositories.py  test_process_repository.py  test_result_repository.py  test_sample_repository.py
backend/tests/integration/services/: test_face_sample_persistence.py  test_live_event_persistence.py  test_storage_reconciliation.py
backend/tests/unit/: test_enrollment_service.py  test_face_matcher.py  test_image_validation.py  test_integration_store_safety.py  test_live_api_auth.py  test_live_camera_service.py  test_live_connector_service.py  test_live_event_service.py  test_live_identity_service.py  test_live_metrics.py  test_live_native_runner.py  test_live_protocol.py  test_live_session_compiler.py  test_live_session_models.py  test_live_session_service.py  test_live_settings.py  test_live_supervisor.py  test_live_telemetry.py  test_live_uri_cipher.py  test_mediamtx_client.py  test_mediamtx_reconciliation_service.py  test_native_video_runner.py  test_observability_config_contract.py  test_observability_semantic.py  test_observability_smoke.py  test_phase1_process_details.py  test_qdrant_adapter.py  test_video_identity_voting_service.py  test_video_job_repository.py  test_video_probe.py  test_video_protocol.py  test_video_result_service.py  test_video_retention.py  test_video_services.py  test_video_storage.py  test_video_tracking_service.py  test_video_worker.py
(+127 files in other folders)
