[project]
name = "mergenvision-api"
version = "0.1.0"
description = "MergenVision Phase 1 Face Recognition API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "fastuuid7>=0.3.0",
    "qdrant-client>=1.12.0",
    "minio>=7.2.12",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "msgpack>=1.1.0,<2.0.0",
    "cryptography>=49.0.0,<50.0.0",
    "opentelemetry-api==1.44.0",
    "opentelemetry-sdk==1.44.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.44.0",
    "prometheus-client==0.25.0",
]

[project.optional-dependencies]
dev = [
  "onnx>=1.17.0",
  "pillow>=12.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
